Ajout d'infos sur les carac du pirate.

--- a/JeuPirates/templates/base2.html
+++ b/JeuPirates/templates/base2.html
@@ -21,6 +21,7 @@
                 <li>Carte aux trésors</li>
                 <li>Le marché</li>
                 <li>Combattre</li>
+                <li>Inventaire</li>
             </ul>
         </div>
 
